* add COPYING_LIBS with LGPL text * fix make distcheck * make update-po * remove enum-types and marshal generated files from libs/
(Old svn revision: 16026)

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST = 								\
 	intltool-update.in						\
 	AUTHORS								\
 	COPYING								\
+	COPYING_LIBS							\
 	ChangeLog							\
 	HACKING								\
 	INSTALL								\
