--- a/iconbox/Makefile.am
+++ b/iconbox/Makefile.am
@@ -14,11 +14,11 @@ xfce4_iconbox_CFLAGS =							\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
 
 xfce4_iconbox_LDADD =							\
-	$(top_srcdir)/libs/libxfce4panel.la				\
+	../libs/libxfce4panel.la					\
 	@LIBXFCEGUI4_LIBS@						\
 	@LIBXFCE4MCS_CLIENT_LIBS@
 
 xfce4_iconbox_DEPENDENCIES =						\
-	$(top_srcdir)/libs/libxfce4panel.la
+	../libs/libxfce4panel.la
 
 
