--- a/configure.ac
+++ b/configure.ac
@@ -47,7 +47,7 @@ AC_CHECK_HEADERS([signal.h stddef.h sys/wait.h time.h netinet/in.h])
 AC_CHECK_FUNCS([sigaction])
 
 dnl Check for i18n support
-XDT_I18N([ar az be bg bn_IN ca cs de en_GB eo es es_MX et eu fa fr fi
+XDT_I18N([ar az be bg bn_IN ca cs de el en_GB eo es es_MX et eu fa fr fi
           gu he hi hu hy it ja lt mr ms nl ko nb_NO pa pl pt_BR pt_PT
 	  ro ru sv sk ta tr uk vi zh_CN zh_TW])
 
