* Added Greek translations by Stavros Giannouris. * Changed language order alphabetically. * Removed extra trailer white space.
(Old svn revision: 17286)

--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -1,10 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Xfce 4 Panel Settings
+Name[el]=Ρυθμίσεις Ταμπλό Xfce 4
 Name[et]=Xfce 4 paneeli seaded
+Name[eu]=Xfce 4 Panel Ezarpenak
 Name[fi]=Xfce 4 paneelin asetukset
 Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
+Name[hu]=Xfce 4 panel beállítások
 Name[ko]=Xfce 4 패널 설정
 Name[lt]=Xfce 4 skydelio nustatymai
 Name[nl]=Instellingen Xfce 4 Panel
@@ -12,13 +15,14 @@ Name[ro]=Xfce 4 setări panou
 Name[ru]=Настройки панели Xfce 4
 Name[zh_CN]=Xfce 4 面板设置
 Name[zh_TW]=Xfce 4 面板設定
-Name[eu]=Xfce 4 Panel Ezarpenak
-Name[hu]=Xfce 4 panel beállítások
 Comment=Panel Settings
+Comment[el]=Ρυθμίσεις Ταμπλό
 Comment[et]=Paneeli seaded
+Comment[eu]=Panel Ezarpenak
 Comment[fi]=Paneelin asetukset
 Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
+Comment[hu]=Panel beállítások
 Comment[ko]=패널 설정
 Comment[lt]=Skydelio nustatymai
 Comment[nl]=Instellingen voor het paneel
@@ -26,8 +30,6 @@ Comment[ro]=Setări ale panoului
 Comment[ru]=Настройки панели
 Comment[zh_CN]=设置面板
 Comment[zh_TW]=設定面板
-Comment[eu]=Panel Ezarpenak
-Comment[hu]=Panel beállítások
 Exec=xfce-setting-show xfce
 Icon=xfce4-panel
 Terminal=false
@@ -35,13 +37,14 @@ Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 GenericName=Panel Settings
+GenericName[el]=Ρυθμίσεις Ταμπλό
 GenericName[et]=Paneeli seaded
+GenericName[eu]=Panel Ezarpenak
 GenericName[fi]=Paneelin asetukset
+GenericName[hu]=Panel beállítások
 GenericName[ko]=패널 설정
 GenericName[lt]=Skydelio nustatymai
 GenericName[nl]=Instellingen Panel
 GenericName[ro]=Setări panou
 GenericName[ru]=Настройки панели
 GenericName[zh_CN]=设置面板
-GenericName[eu]=Panel Ezarpenak
-GenericName[hu]=Panel beállítások
