* Merge back old panel translations. They are mostly unused, I guess, but maybe a few strings are still the same.  * Remove xfce-panel-settings.desktop.in. It doesn't really make sense anymore.  * Add xfce-mouse icon, to be used as default plugin icon.
(Old svn revision: 17878)

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -6,6 +6,7 @@ hicolor48_DATA = \
 	xfce4-panel.png \
 	xfce4-iconbox.png \
 	xfce4-taskbar.png \
+	xfce-mouse.png \
 	xfce-edit.png \
 	xfce-filemanager.png \
 	xfce-games.png \
