--- a/plugins/actions/actions.desktop.in.in
+++ b/plugins/actions/actions.desktop.in.in
@@ -3,6 +3,6 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Panel Actions
 _Comment=Log out or lock the screen
-Icon=xfce4-panel
+Icon=xfce-mouse
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libactions.so
 
