--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Status Area
 _Comment=Show notification icons
-Icon=xfce4-panel
+Icon=xfce-mouse
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libsystray.so
 X-XFCE-Unique=true
 
