Added Hebrew documentations by Dotan Kamber <kamberd@yahoo.com>.
(Old svn revision: 17981)

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,8 @@ doc/C/Makefile
 doc/C/images/Makefile
 doc/fr/Makefile
 doc/fr/images/Makefile
+doc/he/Makefile
+doc/he/images/Makefile
 po/Makefile.in
 icons/Makefile
 panel/Makefile
