--- a/settings/xfce-panel-settings.desktop
+++ b/settings/xfce-panel-settings.desktop
@@ -8,11 +8,13 @@ Name[fi]=Xfce 4 paneelin asetukset
 Name[fr]=Paramètres du panneau Xfce 4
 Name[he]=הגדרות לוח Xfce 4
 Name[hu]=Xfce 4 panel beállítások
+Name[ja]=Xfce 4 パネル設定
 Name[ko]=Xfce 4 패널 설정
 Name[lt]=Xfce 4 skydelio nustatymai
 Name[nl]=Instellingen Xfce 4 Panel
 Name[ro]=Xfce 4 setări panou
 Name[ru]=Настройки панели Xfce 4
+Name[sv]=Xfce 4 Inställningar för panelen
 Name[zh_CN]=Xfce 4 面板设置
 Name[zh_TW]=Xfce 4 面板設定
 Comment=Panel Settings
@@ -23,11 +25,13 @@ Comment[fi]=Paneelin asetukset
 Comment[fr]=Paramétrage du panneau
 Comment[he]=הגדרות לוח
 Comment[hu]=Panel beállítások
+Comment[ja]=パネルの設定を行います
 Comment[ko]=패널 설정
 Comment[lt]=Skydelio nustatymai
 Comment[nl]=Instellingen voor het paneel
 Comment[ro]=Setări ale panoului
 Comment[ru]=Настройки панели
+Comment[sv]=Inställningar för panelen
 Comment[zh_CN]=设置面板
 Comment[zh_TW]=設定面板
 Exec=xfce-setting-show xfce
@@ -42,9 +46,11 @@ GenericName[et]=Paneeli seaded
 GenericName[eu]=Panel Ezarpenak
 GenericName[fi]=Paneelin asetukset
 GenericName[hu]=Panel beállítások
+GenericName[ja]=パネル設定
 GenericName[ko]=패널 설정
 GenericName[lt]=Skydelio nustatymai
 GenericName[nl]=Instellingen Panel
 GenericName[ro]=Setări panou
 GenericName[ru]=Настройки панели
+GenericName[sv]=Inställningar för panelen
 GenericName[zh_CN]=设置面板
