add "[no-xml]" option to AC_PROG_INTLTOOL to remove dep on XML::Parser as suggested by daichi (bug 964) sorry for the spam, but svn is being annoying and won't let me commit all at once.
(Old svn revision: 18290)

--- a/configure.ac
+++ b/configure.ac
@@ -36,7 +36,7 @@ AC_PROG_CC()
 AC_PROG_INSTALL()
 AC_PROG_LN_S()
 AC_PROG_LIBTOOL()
-AC_PROG_INTLTOOL()
+AC_PROG_INTLTOOL([0.31], [no-xml])
 
 LIBXFCE4PANEL_VERINFO=libxfce4panel_verinfo()
 AC_SUBST([LIBXFCE4PANEL_VERINFO])
