Added Swedish translations by     Alexander Toresson <alexander.toresson@gmail.com>.
(Old svn revision: 18309)

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ conf_DATA = 								\
 	contents.xml.ro							\
 	contents.xml.ru							\
 	contents.xml.sk							\
+	contents.xml.sv							\
 	contents.xml.tr							\
 	contents.xml.vi							\
 	contents.xml.zh_CN						\
