--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,7 +17,7 @@ panel/panel-app.c
 panel/panel-app-messages.c
 panel/main.c
 panel/panel-properties.c
-panel/panel-settings.c
+panel/panel-dialogs.c
 panel/panel-dnd.c
 
 plugins/launcher/launcher.c
