--- a/plugins/actions/actions.desktop.in.in
+++ b/plugins/actions/actions.desktop.in.in
@@ -1,8 +1,8 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
-_Name=Panel Actions
+_Name=Action Buttons
 _Comment=Log out or lock the screen
-Icon=xfce-mouse
+Icon=xfce-system-exit
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libactions.so
 
