--- a/plugins/pager/pager.desktop.in.in
+++ b/plugins/pager/pager.desktop.in.in
@@ -3,6 +3,6 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Pager
 _Comment=Miniature view of all virtual desktops
-Icon=xfce4-taskbar
+Icon=wksp
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libpager.so
 
