--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -3,6 +3,6 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Status Area
 _Comment=Show notification icons
-Icon=xfce-mouse
+Icon=xfce-system-info
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libsystray.so
 
