--- a/plugins/testplugin/testplugin.desktop.in.in
+++ b/plugins/testplugin/testplugin.desktop.in.in
@@ -3,6 +3,6 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Test Plugin
 _Comment=This plugin has no purpose
-Icon=xfce-unknown
+Icon=xfce-mouse
 X-XFCE-Exec=@EXTERNAL_PLUGIN_PATH@/testplugin
 
