Add windowlist and showdesktop plugins ported by Jani Monoses.
(Old svn revision: 19661)

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,10 +1,12 @@
 SUBDIRS = 				\
-	launcher			\
-	separator			\
 	actions				\
-	tasklist			\
-	pager				\
-	systray				\
-	iconbox				\
 	clock				\
+	iconbox				\
+	launcher			\
+	pager				\
+	separator			\
+	showdesktop			\
+	systray				\
+	tasklist			\
+	windowlist			\
 	testplugin
