--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -1,7 +1,7 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
-_Name=Status Area
+_Name=System Tray
 _Comment=Show notification icons
 Icon=xfce-system-info
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libsystray.so
