--- a/libxfce4panel/libxfce4panel-1.0.pc.in
+++ b/libxfce4panel/libxfce4panel-1.0.pc.in
@@ -4,6 +4,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 libexecdir=@libexecdir@
 includedir=@includedir@
+localedir=@localedir@
 
 internalplugindir=${libdir}/xfce4/panel-plugins
 externalplugindir=${libexecdir}/xfce4/panel-plugins
