* Add XfceHVBox widget, which is a cute hack to have a box with configurable orientation (suggestion by Jani Monoses).  * Make launcher and systray use the new widget  * Make showdesktop plugin use xfce_create_panel_toggle_button()  * Update library version number, soname and documentation
(Old svn revision: 20094)

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -17,6 +17,8 @@ libxfce4panel_la_SOURCES =				\
 	xfce-arrow-button.h				\
 	xfce-itembar.c					\
 	xfce-itembar.h					\
+	xfce-hvbox.c					\
+	xfce-hvbox.h					\
 	xfce-panel-enums.h				\
 	xfce-panel-convenience.c			\
 	xfce-panel-convenience.h			\
@@ -41,6 +43,7 @@ xfce4_panelinclude_HEADERS =				\
 	xfce-panel-window.h				\
 	xfce-arrow-button.h				\
 	xfce-itembar.h					\
+	xfce-hvbox.h					\
 	xfce-panel-enums.h				\
 	xfce-panel-convenience.h			\
 	xfce-panel-plugin-iface.h			\
