* Change default configuration, mostly as an example of how to get real content on the default panel. This needs to be improved and eventually translated.  * Update version number to 4.3.90.1
(Old svn revision: 20870)

--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -1,4 +1,8 @@
 confdir = $(sysconfdir)/xdg/xfce4/panel
-conf_DATA = panels.xml
+conf_DATA = panels.xml	\
+	    launcher-7.rc \
+	    launcher-8.rc \
+	    launcher-9.rc \
+	    launcher-10.rc
 
 EXTRA_DIST = $(conf_DATA)
