Patches by Jani Monoses: fix icon name in desktop file (bug #1613) and check for valid icon (#1614).
(Old svn revision: 20987)

--- a/plugins/showdesktop/showdesktop.desktop.in.in
+++ b/plugins/showdesktop/showdesktop.desktop.in.in
@@ -3,6 +3,6 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Show Desktop
 _Comment=Toggle desktop show/hide
-Icon=xfce-desktop
+Icon=gnome-fs-desktop
 X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libshowdesktop.so
 
