--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,3 +1,5 @@
+# $Id$
+
 hicolor48dir = $(datadir)/icons/hicolor/48x48/apps
 
 hicolor16dir = $(datadir)/icons/hicolor/16x16/apps
@@ -30,3 +32,17 @@ hicolor16_DATA = \
 
 EXTRA_DIST = $(hicolor48_DATA) $(hicolor16_DATA)
 
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+
+install-data-hook:
+	@-if test -z "$(DESTDIR)"; then					\
+                echo "Updating Gtk icon cache.";			\
+                $(gtk_update_icon_cache);				\
+        else								\
+                echo "*** Icon cache not updated. Remember to run:";	\
+		echo "***";						\
+                echo "***   $(gtk_update_icon_cache)";			\
+		echo "***";						\
+        fi
+
+# vi:set ts=8 sw=8 noet ai nocindent:
