* Fix for Ctrl + button 1 click: don't open two menus (bug #1699).  * Improved windowlist plugin from Nick Schermer. This adds some strings to translate.  * Add mcs plugin that runs 'xfce4panel -c' for convenience.
(Old svn revision: 21173)

--- a/plugins/windowlist/Makefile.am
+++ b/plugins/windowlist/Makefile.am
@@ -7,7 +7,10 @@ libwindowlist_la_LDFLAGS =						\
 	-module
 
 libwindowlist_la_SOURCES = 						\
-	windowlist.c
+	windowlist.h						\
+	windowlist.c						\
+	windowlist-dialog.h						\
+	windowlist-dialog.c
 
 libwindowlist_la_CFLAGS =						\
 	-I$(top_srcdir)							\
