--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -31,7 +31,10 @@ plugins/showdesktop/showdesktop.c
 plugins/systray/systray.c
 plugins/tasklist/tasklist.c
 plugins/windowlist/windowlist.c
+plugins/windowlist/windowlist-dialog.c
 plugins/testplugin/testplugin.c
+
+mcs-plugin/plugin.c
 
 plugins/actions/actions.desktop.in.in
 plugins/clock/clock.desktop.in.in
@@ -44,3 +47,5 @@ plugins/systray/systray.desktop.in.in
 plugins/tasklist/tasklist.desktop.in.in
 plugins/windowlist/windowlist.desktop.in.in
 plugins/testplugin/testplugin.desktop.in.in
+
+mcs-plugin/xfce4-panel-manager.desktop.in
