--- a/configure.in.in
+++ b/configure.in.in
@@ -47,9 +47,7 @@ AC_CHECK_HEADERS([signal.h stddef.h sys/wait.h time.h])
 AC_CHECK_FUNCS([sigaction])
 
 dnl Check for i18n support
-XDT_I18N([ar az be bg bn_IN ca cs de el en_GB eo es es_MX et eu fa fi fr
-	  gu he hi hu hy it ja ko lt mr ms nb_NO nl pa pl pt_BR pt_PT ro
-	  ru sk sv ta tr uk vi zh_CN zh_TW ])
+XDT_I18N([@LINGUAS@])
 
 dnl Check for X11 installed
 XDT_CHECK_LIBX11_REQUIRE
