--- a/config/launcher-7.rc.in
+++ b/config/launcher-7.rc.in
@@ -1,8 +1,8 @@
 [Entry 0]
-Name=Command Prompt
+_Name=Command Prompt
 Exec=Terminal
 Terminal=false
 StartupNotify=true
-Comment=X terminal emulator
+_Comment=X terminal emulator
 X-XFCE-IconCategory=12
 
