--- a/config/launcher-8.rc.in
+++ b/config/launcher-8.rc.in
@@ -1,8 +1,8 @@
 [Entry 0]
-Name=Editor
+_Name=Editor
 Exec=mousepad
 Terminal=false
 StartupNotify=true
-Comment=Edit text files
+_Comment=Edit text files
 X-XFCE-IconCategory=1
 
