--- a/configure.ac.in
+++ b/configure.ac.in
@@ -97,5 +97,8 @@ po/Makefile.in
 docs/Makefile
 docs/API/Makefile
 docs/API/version.xml
+docs/manual/Makefile
+docs/manual/C/Makefile
+docs/manual/C/images/Makefile
 ])
 
