--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,8 @@
+config/launcher-7.rc.in
+config/launcher-8.rc.in
+config/launcher-9.rc.in
+config/launcher-10.rc.in
+
 libxfce4panel/xfce-panel-external-plugin.c
 libxfce4panel/xfce-panel-external-item.c
 libxfce4panel/xfce-itembar.c
