--- a/config/launcher-9.rc.in
+++ b/config/launcher-9.rc.in
@@ -1,8 +1,8 @@
 [Entry 0]
-Name=File Manager
+_Name=File Manager
 Exec=thunar
 Terminal=false
 StartupNotify=true
-Comment=Manage files and folders
+_Comment=Manage files and folders
 X-XFCE-IconCategory=2
 
