Fix/reimplement kiosk mode (bug #1993). Also attempt to fix linking with -Wl,--as-needed (bug #1977).
(Old svn revision: 22442)

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@ EXTRA_DIST = 								\
 	xfce4-panel.spec
 
 DISTCLEANFILES =							\
+	configure.ac							\
 	intltool-extract						\
 	intltool-merge							\
 	intltool-update
