--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -61,12 +61,14 @@ libxfce4panel_la_LDFLAGS = 				\
 	-export-dynamic					\
 	-version-info @LIBXFCE4PANEL_VERINFO@
 
-libxfce4panel_la_LIBADD = 
+libxfce4panel_la_LIBADD = 				\
+	@LIBXFCEGUI4_LIBS@				\
+	@LIBXFCE4UTIL_LIBS@ 
 
 if HAVE_CYGWIN
   libxfce4panel_la_LDFLAGS += -no-undefined
-  libxfce4panel_la_LIBADD += @GTK_LIBS@ @LIBXFCE4UTIL_LIBS@ @LIBXFCEGUI4_LIBS@
-  libxfce4panel_la_CFLAGS += @GTK_CFLAGS@ @LIBXFCE4UTIL_CFLAGS@ @LIBXFCEGUI4_CFLAGS@
+  libxfce4panel_la_LIBADD += @GTK_LIBS@
+  libxfce4panel_la_CFLAGS += @GTK_CFLAGS@
 endif
 
 EXTRA_DIST = 						\
