* Fix terminal icon in default config (bug #2098).  * Hack configure.ac.in to fixup intltool-update to support *.rc.in files (reported on xfce-i18n).  * Make mousewheel scrolling on pager optional. Patch by Nick (bug #1951).  * Update po files. Final string update, hopefully.
(Old svn revision: 22612)

--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -10,5 +10,5 @@ conf_DATA = panels.xml	$(conf_files)
 
 EXTRA_DIST = panels.xml $(conf_in_files)
 
-DISTCLEANFILES = $(conf_files)
-
+distclean-local:	
+	rm -f *.rc
