Patch by Nick:  * Use g_slice_* functions when available at compile time.  * Add macros to be used by panel and plugins. Similar to exo.
(Old svn revision: 22697)

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -49,6 +49,7 @@ xfce4_panelinclude_HEADERS =				\
 	xfce-panel-plugin-iface.h			\
 	xfce-panel-internal-plugin.h			\
 	xfce-panel-external-plugin.h			\
+	xfce-panel-macros.h				\
 	xfce-panel-plugin.h
 							
 libxfce4panel_la_CFLAGS =				\
