Awesome patch by Benedikt: Add search (filter) box to add item dialog. Uses frap-icon-entry.
(Old svn revision: 22712)

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = xfce4-panel
 
 xfce4_panel_SOURCES =						\
+	frap-icon-entry.c					\
+	frap-icon-entry.h					\
 	main.c							\
 	panel-app.c						\
 	panel-app.h						\
