Add dummy scripts for xftaskbar4 and xfce4-iconbox. Can be disabled (useful for packagers, I presume).
(Old svn revision: 22755)

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -1,3 +1,8 @@
+# dummy scripts to replace 4.2 versions
+bin_SCRIPTS = @DUMMY_SCRIPTS@
+
+EXTRA_SCRIPTS = xftaskbar4 xfce4-iconbox
+
 bin_PROGRAMS = xfce4-panel
 
 xfce4_panel_SOURCES =						\
