--- a/configure.ac.in
+++ b/configure.ac.in
@@ -83,6 +83,20 @@ XDT_CHECK_OPTIONAL_PACKAGE([LIBSTARTUP_NOTIFICATION],
 			   [startup-notification], 
 			   [startup notification library], [yes])
 
+dnl install dummy scripts?
+AC_ARG_ENABLE([dummy-scripts],
+        AC_HELP_STRING([--enable-dummy-scripts],
+                [Install empty scripts for the deprecated xftaskbar4 
+		 and xfce4-iconbox (default=enabled)]),
+        [ac_cv_enable_dummy_scripts=$enableval],
+        [ac_cv_enable_dummy_scripts=yes])
+if test "x$ac_cv_enable_dummy_scripts" = "xno"; then
+        DUMMY_SCRIPTS=""
+else
+        DUMMY_SCRIPTS="xftaskbar4 xfce4-iconbox"
+fi
+AC_SUBST(DUMMY_SCRIPTS)
+
 dnl gtk-doc
 GTK_DOC_CHECK([1.0])
 
