* Fix plugin installation on cygwin. Patch by Olivier.  * Set name for panel convencience buttons. Maybe useful for themes?
(Old svn revision: 23462)

--- a/plugins/actions/Makefile.am
+++ b/plugins/actions/Makefile.am
@@ -51,6 +51,8 @@ DISTCLEANFILES =							\
 	
 # get full path into .desktop file
 %.desktop.in: %.desktop.in.in
-	sed -e "s^@INTERNAL_PLUGIN_PATH@^$(libdir)/xfce4/panel-plugins^" \
+	plugin_name=`grep dlname= $(plugin_LTLIBRARIES) | sed "s/dlname='\(.*\)'/\1/"`; \
+	sed	-e "s^@INTERNAL_PLUGIN_PATH@^$(libdir)/xfce4/panel-plugins^" \
+		-e "s^@PLUGIN_NAME@^$$plugin_name^" \
 		$< > $@
 
