--- a/plugins/iconbox/iconbox.desktop.in.in
+++ b/plugins/iconbox/iconbox.desktop.in.in
@@ -4,5 +4,4 @@ Encoding=UTF-8
 _Name=Icon Box
 _Comment=Show icons of all running applications
 Icon=xfce4-iconbox
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libiconbox.so
-
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
