--- a/plugins/testplugin/testplugin.desktop.in.in
+++ b/plugins/testplugin/testplugin.desktop.in.in
@@ -4,5 +4,5 @@ Encoding=UTF-8
 _Name=Test Plugin
 _Comment=This plugin has no purpose
 Icon=xfce-mouse
-X-XFCE-Exec=@EXTERNAL_PLUGIN_PATH@/testplugin
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
 
