--- a/plugins/actions/actions.desktop.in.in
+++ b/plugins/actions/actions.desktop.in.in
@@ -4,5 +4,5 @@ Encoding=UTF-8
 _Name=Action Buttons
 _Comment=Log out or lock the screen
 Icon=xfce-system-exit
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libactions.so
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
 
