--- a/plugins/clock/clock.desktop.in.in
+++ b/plugins/clock/clock.desktop.in.in
@@ -4,5 +4,4 @@ Encoding=UTF-8
 _Name=Clock
 _Comment=What time is it?
 Icon=xfce-schedule
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libclock.so
-
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
