--- a/plugins/launcher/launcher.desktop.in.in
+++ b/plugins/launcher/launcher.desktop.in.in
@@ -4,5 +4,4 @@ Encoding=UTF-8
 _Name=Launcher
 _Comment=Program launcher with optional menu
 Icon=gnome-fs-executable
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/liblauncher.so
-
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
