--- a/plugins/pager/pager.desktop.in.in
+++ b/plugins/pager/pager.desktop.in.in
@@ -4,5 +4,5 @@ Encoding=UTF-8
 _Name=Pager
 _Comment=Miniature view of all virtual desktops
 Icon=wksp
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libpager.so
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
 
