--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -4,5 +4,5 @@ Encoding=UTF-8
 _Name=System Tray
 _Comment=Show notification icons
 Icon=xfce-system-info
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/libsystray.so
+X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
 
