Patch by Olivier to fix yesterdays fix ;-)
(Old svn revision: 23474)

--- a/plugins/actions/Makefile.am
+++ b/plugins/actions/Makefile.am
@@ -2,7 +2,7 @@ plugindir = $(libdir)/xfce4/panel-plugins
 
 plugin_LTLIBRARIES = libactions.la
 
-libactions_la_LDFLAGS =						\
+libactions_la_LDFLAGS =							\
 	-avoid-version							\
 	-module
 
@@ -22,10 +22,10 @@ libactions_la_DEPENDENCIES =						\
 	../../libxfce4panel/libxfce4panel.la
 	
 if HAVE_CYGWIN
-libactions_la_LDFLAGS +=                        	                \
-	-no-undefined                                                   \
-	@LIBX11_LDFLAGS@                                                \
-	@LIBXFCEGUI4_LIBS@                                              \
+libactions_la_LDFLAGS +=						\
+	-no-undefined							\
+	@LIBX11_LDFLAGS@						\
+	@LIBXFCEGUI4_LIBS@						\
 	@LIBX11_LIBS@
 endif
 
@@ -50,7 +50,7 @@ DISTCLEANFILES =							\
 	$(desktop_DATA) $(desktop_in_files)
 	
 # get full path into .desktop file
-%.desktop.in: %.desktop.in.in
+%.desktop.in: %.desktop.in.in $(plugin_LTLIBRARIES)
 	plugin_name=`grep dlname= $(plugin_LTLIBRARIES) | sed "s/dlname='\(.*\)'/\1/"`; \
 	sed	-e "s^@INTERNAL_PLUGIN_PATH@^$(libdir)/xfce4/panel-plugins^" \
 		-e "s^@PLUGIN_NAME@^$$plugin_name^" \
