--- a/plugins/windowlist/Makefile.am
+++ b/plugins/windowlist/Makefile.am
@@ -22,8 +22,8 @@ libwindowlist_la_LDFLAGS =						\
 	-module
 
 libwindowlist_la_SOURCES = 						\
-	windowlist.h						\
-	windowlist.c						\
+	windowlist.h							\
+	windowlist.c							\
 	windowlist-dialog.h						\
 	windowlist-dialog.c						\
 	xfce4-popup-windowlist.h
@@ -41,10 +41,10 @@ libwindowlist_la_DEPENDENCIES =						\
 	../../libxfce4panel/libxfce4panel.la
 	
 if HAVE_CYGWIN
-libwindowlist_la_LDFLAGS +=                        	                \
-	-no-undefined                                                   \
-	@LIBX11_LDFLAGS@                                                \
-	@LIBXFCEGUI4_LIBS@                                              \
+libwindowlist_la_LDFLAGS +=						\
+	-no-undefined							\
+	@LIBX11_LDFLAGS@						\
+	@LIBXFCEGUI4_LIBS@						\
 	@LIBX11_LIBS@
 endif
 
@@ -69,7 +69,7 @@ DISTCLEANFILES =							\
 	$(desktop_DATA) $(desktop_in_files)
 	
 # get full path into .desktop file
-%.desktop.in: %.desktop.in.in
+%.desktop.in: %.desktop.in.in $(plugin_LTLIBRARIES)
 	plugin_name=`grep dlname= $(plugin_LTLIBRARIES) | sed "s/dlname='\(.*\)'/\1/"`; \
 	sed	-e "s^@INTERNAL_PLUGIN_PATH@^$(libdir)/xfce4/panel-plugins^" \
 		-e "s^@PLUGIN_NAME@^$$plugin_name^" \
