--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -4,7 +4,6 @@ liblauncher_LTLIBRARIES = liblauncher.la
 
 liblauncher_la_LDFLAGS =						\
 	-avoid-version							\
-	-export-dynamic							\
 	-module
 
 liblauncher_la_SOURCES = 						\
@@ -15,7 +14,7 @@ liblauncher_la_SOURCES = 						\
 
 liblauncher_la_CFLAGS =							\
 	-I$(top_srcdir)							\
-	$(LIBXFCEGUI4_CFLAGS)						\
+	@LIBXFCEGUI4_CFLAGS@						\
 	-DLOCALEDIR=\"$(localedir)\"
 
 liblauncher_la_LIBADD =							\
@@ -28,9 +27,9 @@ liblauncher_la_DEPENDENCIES =						\
 if HAVE_CYGWIN
 liblauncher_la_LDFLAGS +=						\
 	-no-undefined							\
-	$(LIBX11_LDFLAGS)						\
-	$(LIBXFCEGUI4_LIBS)						\
-	$(LIBX11_LIBS)
+	@LIBX11_LDFLAGS@						\
+	@LIBXFCEGUI4_LIBS@						\
+	@LIBX11_LIBS@
 endif
 
 # .desktop file
@@ -54,7 +53,7 @@ DISTCLEANFILES =							\
 	$(desktop_DATA) $(desktop_in_files)
 	
 # get full path into .desktop file
-%.desktop.in: %.desktop.in.in
+%.desktop.in: %.desktop.in.in $(plugin_LTLIBRARIES)
 	plugin_name=`grep dlname= liblauncher.la | sed "s/dlname='\(.*\)'/\1/"`; \
 	sed	-e "s^@INTERNAL_PLUGIN_PATH@^$(libdir)/xfce4/panel-plugins^" \
 		-e "s^@PLUGIN_NAME@^$$plugin_name^" \
